031-Mary-Carroll transcript

--- a/_pages/podcast-episodes/ep-031.md
+++ b/_pages/podcast-episodes/ep-031.md
@@ -11,4 +11,249 @@ image: /images/guests/Marry-Carroll.jpg
 show: false
 ---
 
-Coming Soon
+Hey, everybody, are you getting the most out of your performance? Are you doing all the right things? At the end of the day? Are you satisfied with what you've done to move your professional career or business forward?
+
+I know I'm not always. That's why I got a business coach. In the past, I haven't used her in a little while. Well, I haven't met with her in a little while. He used someone. But I haven't had any sessions with her in awhile. And I think it's probably time to get back to that. And in this episode, I talked to a friend of mine, Mary Carroll, who is a business coach, and discuss what's involved in it, how it works, and how a business coach might help you. So I hope you enjoy this episode.
+
+Dave: Hello, and welcome to the podcast. I'm your host Dave Albert. In this show, I talk about technology, building a company as a CTO and co founder, and have guests to discuss their roles in technology and entrepreneurship.
+
+Today, we're joined by Mary Carroll, a business coach, and my friend. Thanks for joining us, Mary.
+
+Mary: Thanks for having me, Dave. 
+
+Dave: It's a pleasure to have you here. Would you tell us a little bit about yourself to get us started?
+
+Mary: Sure. Um, I suppose I'm going to start back quite a while ago. So I began my career, academically very different types of roles and how my career has developed. And so I have a degree in philosophy and have a master's in psychoanalysis, have a postgrad in law, and have a post grad in executive coaching. So yeah, quite different, quite diverse. So I began my career training as a solicitor. And while I did enjoy it, I realized it wasn't what I wanted to do forever. And, yeah, I decided to give it up, which was very unusual move for a lot of people after putting that much work into the exams and that sort of thing. 
+
+So I moved away from law. And I got into legal recruitment, because I thought it was a great way for me to use my knowledge from training as a solicitor. And unfortunately, that was over 10 years ago, when everything kind of went belly up in the recession. So I was left kind of wondering, what am I going to do. 
+
+So about 10 years ago, like I said, I got into them, Microsoft, an opportunity came up in Bing. And yeah, just got very lucky, and got the job in Bing and I happened, like I said, I hadn't any academic training in, in digital marketing or anything. So I got fully trained with Microsoft. And that was the beginning, really, of my digital career.
+
+I worked in Microsoft for a number of years. And then I moved to Yahoo, again, in the same kind of area, moving more into the partnership space, and then to Symantec, where I'm currently working. So again, that was with partnerships. And then moving on to the product side of things.
+
+Dave: Which is where we met.
+
+Mary: Which is where we met. Yeah. And it was during that period of time that I became very interested in coaching, I myself was being coached. And I just had a bit of an aha moment. And I just thought, I really, really love I really love this. And it also it kind of, I suppose resonated so much with me, because I have an interest in business psychology, and generally people psychoanalysis, and I taught coaching could be really, really helpful. It really helped me. 
+
+So I decided then to train. And I trained with UCD Smurfit  and then went on to work in that field for the last couple of years, I did a lot of training around emotional intelligence and leadership training. And I've started my own consultancy down off the back of that as well.
+
+Dave: Great. And, you know, I don't know that we ever spoke about you studying law.
+
+Mary: Yeah.
+
+Dave: Did you know that I thought I wanted to be a lawyer for a long time. And I didn't start , well I started to study for the entrance exam. But I went to work in a lawyer's library and did that for a few years part time, and realized that as much as I kind of liked the idea of it, the actual work didn't suit me. To invest it in loving computers. So yeah.
+
+Mary: It is, yeah. It's funny, because, for me, I decided to, to train as a lawyer and to study at first, because I taught, you know, one of the skills that you get from studying philosophy is that you really know how to make a coherent, strong argument. And I thought, you know, what, where would this be valuable? 
+
+And, you know, I just thought law, but when like that, when I got to realize what's involved in the day to day, and the day to day, part of being a lawyer, didn't really appeal to me. So I actually did the professional entrance exams, and I began training, and with a law firm, and then it was quite unusual, because most people when they put themselves through those entrance exams, which are really difficult, they always kind of complete the training. 
+
+But I just thought, you know what, if you don't want to be a lawyer, it's not the kind of thing you just train and you go, Oh, I'm not going to do this. Yeah, you kind of you're either in or you're right. So um, yeah. I've never regretted it either though. I've never really looked back, you know, digital marketing. When I, when I got into it, I'll be at by chance. It felt right. Yeah.
+
+Dave: So what does a business coach do?
+
+Mary: Okay, well, I think that is, that's a great question, great place for us to begin. And I suppose it really people's idea of what coaching is so broad, so I think that's a good place to start. And then we can talk more about like business coaching, per se. So coaching is very different than mentoring. 
+
+It's not about, you know, telling the individual what they should do. And you could be a brilliant business coach at like 25, and you're coaching somebody who's in their 50s. And who clearly has a lot more experience, and a much better understanding, maybe have lots of business practices. 
+
+Business coaching is really facilitating an intelligent, good conversation with an individual to help them to learn, develop, and understand, I suppose, the best way forward for them. So when it comes to a business coach, you're really, you're talking to somebody about the best way forward, concerning their business issue, whatever that is.
+
+It's always up to the person being coached the coachee to decide, what exactly it is that they want to get out of the coaching, you know. So really, they're there in the driving seat, the coachee is there, excuse me, the coach is there just to facilitate that conversation. And I would say it's about asking skilled questions, to help the individual to come to a conclusion, whatever that conclusion is about their, whatever goal they bring to the conversation,
+
+Dave: What are typical types of issues or problems or improvements, people come to a business?
+
+Mary: Yeah, they can, they can really vary, you know, I would say work-life balance is a huge one. A lot of people spend a huge amount of time in the office. And when they're not in the office, they're thinking about the office, and when they're at home, they're checking their phone, their whatever, it just takes over their whole life. 
+
+So work-life balance is a big thing, people figuring out that, you know what, it's great to work hard, but I need to also pay attention to my family. And, and that's part of enjoying life. But everything from you know, how do I get that promotion? I've been working in the same role for quite a period of time. I think I'm ready. 
+
+What do I need to do to do it? And I want to be able to manage relationships better within the workplace, I felt like my relationships aren't strong enough. How do I become more assertive, confident? I feel those things are holding me back, you get a lot of people who come back from maternity leave. 
+
+And actually, we mentioned this, I mentioned this to you earlier on, who are really feeling that you know, a little bit overwhelmed when they come back after being out of work for a year. And maybe if they're a new mother, or they've added two or three children, and it's a lot. So it's coaching is a great way for people to have support during that period.
+
+Dave: Yeah. How? How is it that? What does a normal or a typical, first few sessions, what does that go like? What are their typical sessions?
+
+Mary: I would say yes and no. I mean, you'll always get people that come in. And, and you really can't, I think to be a good business coach, you're not meant to make any sort of an assumption, you know, so somebody is coming in. And there's this thing called positive regard that you have for everybody.
+
+So they come in, and it should be like a blank sheet of paper. So when that happens, you know, you're you really are, you're not thinking about the last person who said that they had the same issue, you know, you're really just dealing with that person, and they've got a white sheet of paper, so to speak. 
+
+So I wouldn't say there's a typical experience in that you really have to stand back and let the individual talk about their own issues. But generally speaking, so some of the common kind of the common process, maybe that's a better way of putting it, it's usually 3-6. 3-6, the first session is usually longer than an hour and a half. 
+
+And, you know, one of the main, the key pieces over of a coaching process being successful is the relationship that's built up between the coachee and coach that dynamic. And obviously, a key element is trust. So that first meeting is really about establishing trust, and, and making sure that the relationship is good enough that you guys can work together.
+
+So generally speaking, when you meet for the first time, it's a bit longer, so maybe an hour and a half, two hours, and the individual, the coachee, will take you through, whatever it is, they want to get out of the coach, and they'll talk coaching and whatever it is that they are having difficulty with. 
+
+So you as a coach are just really there to listen, and, and to take in I suppose everything that's going on at the end, then you normally will make a suggestion as to continue for at least two or three more sessions. So it's bringing up to three or four. And at the end of that period of time, if the individual is satisfied, then we can end or if they feel it's necessary to continue like you would add on more sessions.
+
+Dave: Okay. What have you got out of coaching as being someone who has been coached?
+
+Mary: Oh, um, I think for me, what I get out of being a coach is, honestly, it is a feeling of, assisting somebody to reach a point that they feel like they found a way forward. You know, and I guess that's probably one of the main things that I got out of coaching when I was being coached and what led me to train as a coach.
+
+And, you know, that feeling that aha moment is, is what it's called. But, you know, everybody can relate to that moment where you "Woah, so that's the way I'm going to get from here to where I want to get to" you know, figuring it out. So yeah.
+
+Dave: So I guess coaching can also help you figure out where the next step is not just how to take the next step, but where it is you're trying to get to?
+
+Mary: Absolutely, yeah, I mean, and sometimes I think when you're in the middle of a coaching session with somebody, it will become very clear quite quickly, that the individual isn't just talking about how it might be the when the can be all sorts of things will come up, you know, and you'll quickly realize that actually, where they wanted to what they wanted to talk about, or they themselves will say "Actually, this is what I really need to talk about" you know, so can be a whole load of things that will come up, how who helped wherever, you know.
+
+Dave: Gotcha. So you've got a player in front of you about the was it EQ?
+
+Mary: EQ, I, yeah. Emotional intelligence. Yeah. 
+
+Dave: Can you talk to me a little bit about that?
+
+Mary: Yeah, sure. Um, so I'm just taking this actually your name. So one of the areas that I trained, I trained in as well is emotional.
+
+Dave: Sorry just talking into the mic.
+
+Mary: Excuse me, sorry.
+
+Dave: No worries.
+
+Mary: So one of the areas I trained in was emotional intelligence and leadership training. So emotional intelligence and for anybody who doesn't know is, it's really looking as the part of the IQ, that's about your self-perception, and your self-expression, were into a personal composite, decision making composite and stress management composition.
+
+And those together, put together are what make up your total EI score, and it's called. So this kind of work is really important when, when dealing with individuals who may have problems with confidence, assertiveness, and the data you get from this report allows you to have a more focused and deeper conversation very quickly.
+
+It's also very important when you are dealing with very senior leaders within an organization, and they're trying to understand how to improve relationships, because I think that star they everybody taught, you know, business and emotion, were separate, and they should be kept separate. 
+
+Whereas now, it's pretty much accepted that emotion, emotion plays a huge part in business every day, the week, it's the biggest part of relationships, it's sometimes it's very simple. Why does somebody want to do business with one person over another, and it's due to the fact that they connect with them that they get on with them? It can be that simple, you know. 
+
+So an emotional intelligence score just allows you to know, it gives you data, I suppose about your own personality, and, and where it is that you might like to focus on improve on, you know.
+
+Dave: So if, how do you? Is this a self-assessment type of thing? Or something that you do with the person? How would you like, yeah, how would you go about writing?
+ 
+Mary: Yeah, sure. It's a good question. It's a self-assessment. So you are sending a link to somebody, and it takes approximately 20 minutes, maybe 25 minutes, depending on the person. And they should do that in a time period, they've got space to think, you know, it's not a good idea to do when you're trying to, I don't know, put the kids down or whatever. 
+
+But yeah, so the link is a handout. It's a self-assessment, the data comes back, and then I will help the person to like really understand the report. And yeah, interpret it the best way for them. And to understand what to set some goals, yeah, to set goals around the area that they want to improve.
+
+Dave: Is there anybody that wouldn't help? Other than someone who doesn't want to improve?
+
+Mary: Absolutely not. No, I think this is my own personal opinion. Excuse me. Emotional intelligence is probably the most important thing to, to understand about yourself in order to develop yourself. And I think that's at any level, but particularly people who are leading in leadership positions and leading companies,
+
+Dave: Would you need to know the person very well, after receiving the results?
+
+Mary: No, absolutely not. In fact, the data should stand on its own, you know, it's like anything else. And again, the fact that I've been trained in this allows you to work with an individual that you've never met before, most of the people I've worked with, I've never met before. And, yeah, it's a combination of using the data from the QI reports. And also, you know, again, you're going back to your own coaching techniques and skills and using those. 
+
+Dave: So you might have somebody fill that form out before their first coaching session, or would it be after the first session after you've developed the trust, or?
+
+Mary: I would normally recommend it after the first session personally. Sometimes there are coaches that recommend it straightaway, they may have a phone consultation, and it will be apparent that that kind of a report and that data would be really helpful for the for the session straight away. But normally, for me, I will speak to the individual or team or whatever it is in that first session. And, yeah, I'll recommend it from there. And we'll have the data for the second.
+
+Dave: How do sessions for individuals differ from sessions of teams?
+
+Mary: Well, I think the main difference is just you've got a lot of voices. So you're trying to facilitate a coaching session when you've got a lot of people in the room and a lot of different needs to be met. So the skill set, you're using while its, you're using a lot of the same skill set, it's for the coach, just being aware that you have a huge number of people in the room that you're you're trying to meet their, their needs and their goals for the session. So it's keeping it all together for one to how I would phrase it better. And definitely, when you're working one on one with somebody, it's a little bit easier, for sure.
+
+Dave: So obviously, I've had some sessions. Unfortunately, I couldn't have them with Mary, because we're friends. But it was they were great sessions just kind of fell out of having them. But when you have an individual session, you know, you come in with a number of things that you yourself want to work on. 
+
+And the coach helps you figure out if there are things that are even deeper that you haven't realized. But for group sessions, is it trying to improve the individuals? Or is it that that particular team of individuals to like, come into a business, and that business has a specific problem or goal, and they're not sure, the right way for that team to accomplish what they need to not so much about the tactics of you telling them what to do in their business? But yeah, what areas they can focus on and to improve. Is it like that? Or is it more of just uplifting everyone in the group? Does that make sense? 
+
+Mary: It makes total sense. And, you know, it can be about all of those things to really be honest. And so first of all, your objective is about the group in group coaching, for sure. So if it's about how can we work together better, I'm just, you know, taking that out of my head, that is the objective. 
+
+So obviously, at the end of a session or sessions, you would like to think that you've helped contribute to that group working better, very simply together. However, within those sessions, you know, it would be about raising awareness. Again, for individuals in the group who are maybe not contributing, or not helping, and the group to work together, they may be part of the problem and they're maybe a realization, or an awareness that they need to make changes to themselves before to better the group, you know, the best of the group. 
+
+So I think it can mean so many things, you know, you're there as yourself as an individual, because you can't be anybody else. But for group coaching, the objective is, of course, different because it's aabout, you know, the group, it's a group goal. 
+
+Dave: And have you done any sessions? Or is it common to have sessions with a group of people who don't really know each other?
+
+Mary: The groups that I have worked with have always known each other. But I think perhaps there's organizations who are putting new teams together. And from the gecko, they introduce a coach to, to focus on them as a team and how they can work together straight away from the gecko.
+
+Dave: Okay. Since you're training in the coaching, have you noticed a difference in the way you think, or talk to yourself?
+
+Mary: Definitely, yeah, yeah, that and that is, yet again, that's a brilliant question. Completely, it changes. Well, it changes the way you think. So it changes the way you think it changes the way you talk to yourself. And just generally, the way I think about my own career, my own relationships, personal professional. 
+
+And I think coaching, and especially the emotional intelligence data gives you a lot more of an understanding of yourself, you know, of who you are. And, and, and the areas you want to improve about yourself. So definitely, you talk to yourself differently, because you understand yourself a lot more, you know, and I would say Mary before and after coaching is, is having trained, sorry, before and after is very different. Very different. 
+
+Dave: What kind of questions are on that questionnaire? Like, I don't need to know all of them. But just the
+
+Mary: The EQI? Yeah, actually, you know, what, I think I might have some of these questions here. I don't actually don't have a list of them. And I'll be making up stuff now. Because you know I'm making them up on the spot. But like I said, a lot of this stuff is the way that the report is set up. So they'll ask the same question probably three or four times in a different way, just to make sure that the answer you're giving is actually right. You know, and I can't give examples. I'm sorry, I should have brought the sample questions as well.
+
+Dave: No problem at all. So your new company?
+
+Mary: Yes. Yeah. Yeah. 
+
+Dave: And what's it called?
+
+Mary: iDetermined.
+
+Dave: Can you talk about that name a little bit.
+
+Mary: Yeah. So it's actually small i, and then Big D for determined. And iDetermined comes from, you know, I the person, the individual, the company, whoever it is, can determine their own success. And that's genuinely what I believe. So I thought it'd be a great name. The small i actually was my way of relating it to the online world as well, because I come from digital marketing, and I do some that in my consultancy as well. So yeah. 
+
+Dave: So what kind of, like. Is it services do you offer? Is it the one on one? Group? Business Group? What sort of things are you offering?
+
+Mary: Both. Yeah, so yeah, just working with individuals, one on one for the reasons we said there. A lot of companies have the coaching as part of the individual's development plan. So it's, if companies offering that it's a great way for the individual to, to understand where their career goes next, and working with groups, again, around the same sorts of how can we work together? How can we be more productive? How can we perform better? All those kinds things. 
+
+The assessments, the EQI assessments are, are used predominantly for senior leaders within organizations, because it's important at that level to really know where your EQI is, and to do a little bit of work on it. And there again, there are lots of different assessments as well that I look at, that I'd recommend, after speaking to, to a company or an individual around, depending on the kind of data I think would be helpful.
+
+Dave: I was thinking about the levels of people in their career, you know, you were saying that this EQI is for more senior leaders. But coaching could help people in pretty much any area.
+
+Mary: Yeah, sure. And I don't want to say EQI reports are predominately for senior leaders. That's just been my experience, like predominantly that companies have been asking for senior leaders. But no, I mean, when somebody talks to you about having confidence issues, assertiveness, all of the data within an EQI report is really, really helpful when you're trying to have a conversation. And that can be at any level.
+
+But I would say coaching, just, generally speaking, is fantastic for anybody trying to progress their career, trying to understand where to go next. And that can happen to someone, whether they're, I don't know, 20 or 60. You know, we all work quite a long time now. And so, yeah, coaching, I really believe is great for anybody at any level of their career on any stage.
+
+Dave: Yeah, you know, you're talking about how it used to be that emotion was completely separate from business. I was like that from the beginning of my career and thought anybody who showed any emotion basically, other than anger, yeah, was just nonsense. That is just the worst attitude. And if somebody should have beat me over the head with, my EQI report back when I was younger.
+
+Mary: But I think that was like really typical. That's really how, culturally, most people thought, you know, so, but I think it's changing slowly but surely, they say so. 
+
+Dave: I think so. But I mean, I can only speak from my own perspective. And, obviously, you know, after starting the company, I had things to worry about, that I'd never worried about before. So I got a lot more familiar with different types of worries and anxiety and emotion that you can't just turn off.
+
+Mary: Yeah. And so and Dave, the natural coach, by the way, everybody should know that. 
+
+Dave: Well, thank you very much. Yeah. Let's see what else what else have we talked about? So, typically, how much time should a person invest into the coaching? So not just the session, but, you know, work outside of the session?
+
+Mary: Yeah. Again, that's a really good question. I think, usually, we come up with a plan together, you know, and it can be things as small as every day for that individual to do something that takes them 15 minutes, you know, but I think the important piece, it's not about the length of time, you know, it's the fact that they're invested in doing whatever it is, whatever work comes out with the sessions that they need to do, that they are committed to doing it and do it consistently. 
+
+And so rather than putting a time limit on it, I think it's just important that somebody if they're going into coaching, and they really want to get a lot out of it, that they are are committed to doing whatever. Yeah, whatever work is put in front of them to do.
+
+Dave: It seems like that's everything. Consistency is more important than duration. A little bit of exercise every day is better than you or a marathon every five years. 
+
+Mary: Yeah, exactly. And, again, you know, if somebody is doing two hours every day, that's quite difficult to fit in, especially if if they've got already got a very busy schedule. So consistently putting in 15-20 minutes. I mean, depending of course, what it is that they're trying to achieve. But I think that's, that shows a high level of commitment. And it means it's probably easier for them to continue doing that long term. It's very hard to continue doing two hours of whatever every day and fit it in, you know, so.
+
+Dave: So, I'm a listener, and I've decided, Okay, I like Mary, I'm going to contact her to be my coach. So what's, what's the next step? So if I'm in Dublin, I can meet you somewhere. But if I'm not in Dublin?
+
+Mary: Yeah, contact me by mobile phone. My mobile number is 0860271778. And then otherwise, on email info@idetermine.ie
+
+Dave: Okay, and so you can handle sessions remotely over like video chat, or?
+
+Mary: Yeah, absolutely, of course, I think the best thing to do is, is give me a call. And, you know, and we'll have a chat about what it actually is that the person wants to get out of coaching, what they want to achieve, and then we can put a plan together, you know.
+
+Dave: And what sort of investment are they talking about, you know, how much is that going to cost the person. If you don't have your, if it's individual or like a range, just so they have an idea if we can afford.
+
+Mary: Yes, of course, individual coaching can vary. But normally, if you're looking at roughly about 150 euros an hour upwards, you know, and depending on on the coach and the level of experience of the coach, you know, some coaches are charging a lot more than that. And then when you are talking about a company, bringing in a business coach to a company that can really that really starts all off at about 450 euros an hour. And again, it can go up from there.
+
+Dave: Yeah. But I mean, you're talking about investment in the thing, that's the most important of your earnings. Yeah. So if you can become a better employee, business owner, business person, then the investment in that doesn't seem that big when a new phone is 10 times that change in 3-6 sessions.
+
+Mary: Exactly. Yeah. You know, and, and hopefully, long term, that's you're going to see the value in that in your business, you know.
+
+Dave: Do you see people doing it for an extended period of time, like for years? Or is it?
+
+Mary: You definitely do. The problem, I suppose, especially in a one to one session is it can walk the line then a little bit and slip into more like a therapy session. And of course, there are similarities but coaching and therapy are very different from coaching is very future focused. You know, so it definitely happens people continue on with coaching and find it very beneficial from a business point of view. But yes, sometimes it can, it can slip, the focus can slip if it goes on too long.
+
+Dave: Okay. Is there anything else that we haven't discussed that would be really beneficial?
+
+Mary: No, I think I think you've done a great job of taking everybody through every aspect of, of my experience on my new consultancy, so um, yeah, thank you for that. I really appreciate it. 
+
+Dave: Thank you. And so like, as she said, Mary gave her phone number. I'll put it in the show notes. But you want to give it one more?
+
+Mary: Yeah. 0860271778.
+
+Dave: And that's +353. So that's in Ireland, and add your website, email, and phone number, and any social profiles that you pass me after the episode to the show notes. So if I were you I would contact Mary and see about that first session just to see if it's a good fit. I would definitely have her as a coach if we weren't already friends, so.
+
+Mary: Oh, thank you, Dave. And thank you so much for having me. This has been a great conversation.
+
+Dave: I've really enjoyed it. Thank you for joining. And thank you all for listening.
+
+Dave: Hope you enjoyed that. As much as I did. I thought it was a good episode. I'm amazed how quickly that went by. I believe it was a bit shorter than some of the episodes. That's partially why I decided to start adding a little bit more content before and after. Hope that's valuable. Reach out to me if it is or isn't. You know, I'm on Twitter, @dave_albert, or email podcast@dave-albert.com. 
+
+So yeah, I've done a number of coaching sessions. When I still worked at Symantec, I used one of the internal coaches that they provided. And one of the really valuable tools that he used with me was a values assessment. So you look through a number of words and circle the ones that matter to you, the words being values. All things like autonomy, mastery honesty, daring, I don't have the list in front of me, it is a large number of words. 
+
+And then you go through and rank them in order of importance to you. And then you give a value of how well you are serving those values. And I found that extremely useful. I was able to realize a number of things that I was not serving the way that I should if I really valued them in the way that I did. And that's kind of what gave me the push to go full time with 115, which is now in a building Medit. 
+
+So I'd always wanted to be out on my own, well, obviously I have my co-founder, but in my own company, whether I was solo or with someone else, someone else's is kind of key for me realize that I need that back and forth with someone to move forward in the right direction. Anyway, that's another topic. But that really helped me focus on what I needed to do, and why I needed to do this and getting into the startup world.
+
+Again, later, the business coach that I've had sessions with, since I left that Mary introduced me to she helped me with a number of things, really, it's just helping you understand what it is that you're doing that either serves or doesn't serve, what it is you want to achieve. And it was really valuable. And I know I've fallen out of the habit of that just like a fallen out of the habit of meditation and deeper thinking early in the morning.
+  
+Both things that I've discussed with a business coach, and you're really what it's not like anything she necessarily said to me was groundbreaking. But it was helping me identify those things that I should be doing, that are quite obvious when I guess it's like someone just shining a light on the thing that you already know you should do. 
+
+Which is just it's really hard to do it on your own. So having that assistance makes it a lot easier to identify what it is you should do. Just like everything else, just because it then becomes simple doesn't mean it's easy. So even knowing what to do doesn't always mean you'll do it. So it's not a magic wand that just fixes everything for me, but it's extremely valuable. And like I said, I definitely should get back to having sessions with either her or someone else depending on her availability.
+
+Okay, well reach out to me. Let me know what you think of this episode or any other episode on Twitter or email.
+
+Until next time, remember any sufficiently advanced technology is indistinguishable from magic.
+
