--- a/_pages/podcast-episodes/ep-034.md
+++ b/_pages/podcast-episodes/ep-034.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/034
 title: "Tackle Diversity and Inclusion challenges together, as a community with Vessy Tasheva"
 subtitle: "Guest Vessy Tasheva - helping D and I leaders though an online community"
-label: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com | vessy@vessy.com | https://vessy.com/ | https://twitter.com/vessytash | https://www.linkedin.com/in/vesselinatasheva/ "
+label: "Vessy has created an online community for those leading Diversity and Inclusion initiatives - vessy.com <br> <br> <a href='mailto:vessy@vessy.com' target='_blank'>vessy@vessy.com</a> <br> <a href='https://vessy.com/' target='_blank'>https://vessy.com/</a> <br> <a href='https://twitter.com/vessytash' target='_blank'>https://twitter.com/vessytash</a> <br> <a href='https://www.linkedin.com/in/vesselinatasheva' target='_blank'>https://www.linkedin.com/in/vesselinatasheva</a>"
 date: Wed, 16 Jul 2019 04:20:54 GMT
 duration: "00:56:42"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/034-Vessy-Tasheva.mp3
