--- a/_pages/podcast-episodes/ep-036.md
+++ b/_pages/podcast-episodes/ep-036.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/036
 title: "Can you tell the story of your product value? Simon Wardley’s Value Chain Mapping can help."
 subtitle: "Aidan Molloy Sr Product Manager joins us to discuss Wardley mapping."
-label: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement <br> Checkout this post for images to help understand what we are discussing.  https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c <br>   https://www.linkedin.com/in/aidanmolloy/ <br> https://twitter.com/aidan_molloy"
+label: "Find out more about Simon Wardley’s Value Chain Mapping and the journey to creating a map with Aidan Molloy. #WardleyMapping for #ProductManagement <br> Checkout this post for images to help understand what we are discussing.  <br> <br> <a href='https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c' target='_blank'>https://medium.com/workday-engineering/detailing-the-evolution-of-the-workday-grid-through-wardley-mapping-affcf436a73c</a> <br> <a href='https://www.linkedin.com/in/aidanmolloy/' target='_blank'>https://www.linkedin.com/in/aidanmolloy/</a> <br> <a href='https://twitter.com/aidan_molloy' target='_blank'>https://twitter.com/aidan_molloy</a>"
 date: Tue, 30 Jul 2019 04:20:54 GMT
 duration: "00:50:28"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/036-Aidan-Molloy.mp3
