--- a/_pages/podcast-episodes/ep-035.md
+++ b/_pages/podcast-episodes/ep-035.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/035
 title: "What's it like starting a digital agency and managing multiple software products?"
 subtitle: "Dermot O'Shea (Founder) and Peter Delaney (Director pf Product) join me to talk about Wondr.io"
-label: "Dermot talks with us about starting WONDR - A Digital product Practice, and Peter talks with us about managing multiple software projects | WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses | https://wondr.io/ | https://twitter.com/wondrdublin | Dermot https://www.linkedin.com/in/dkos/ | Peter https://www.linkedin.com/in/peter-delaney-ba28a89/ "
+label: "Dermot talks with us about starting WONDR - A Digital product Practice, and Peter talks with us about managing multiple software projects <br> WONDR - A Digital Product Practice bringing Clarity + Bravery to digital businesses <br> <a href='https://wondr.io/' target='_blank'>https://wondr.io/</a> <br> <a href='https://twitter.com/wondrdublin' target='_blank'>https://twitter.com/wondrdublin</a> <br> Dermot: <a href='https://www.linkedin.com/in/dkos/' target='_blank'>https://www.linkedin.com/in/dkos/</a> <br> Peter: <a href='https://www.linkedin.com/in/peter-delaney-ba28a89/' target='_blank'>https://www.linkedin.com/in/peter-delaney-ba28a89/</a>"
 date: Tue, 23 Jul 2019 04:20:54 GMT
 duration: "01:02:05"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/035-Wondr.io.mp3
