--- a/_pages/podcast-episodes/ep-037.md
+++ b/_pages/podcast-episodes/ep-037.md
@@ -3,7 +3,7 @@ layout: podcast
 permalink: /podcast/episode/037
 title: "What's up Felipe? Social media reduction"
 subtitle: "New episode type asking Felipe Coelho Kussik What's up?"
-label: "Felipe joins us to talk about what's on his mind.  This week it's social media and reducing the one's addiction to the dopamine hits. <br> https://twitter.com/seufelipe <br> https://www.instagram.com/seufelipe/ <br> https://letterboxd.com/seufelipe/"
+label: "Felipe joins us to talk about what's on his mind.  This week it's social media and reducing the one's addiction to the dopamine hits.  <br> <a href='https://twitter.com/seufelipe' target='_blank'>https://twitter.com/seufelipe</a> <br> <a href='https://www.instagram.com/seufelipe/' target='_blank'>https://www.instagram.com/seufelipe/</a> <br> <a href='https://letterboxd.com/seufelipe/' target='_blank'>https://letterboxd.com/seufelipe/</a>"
 date: Tue, 06 Aug 2019 04:20:54 GMT
 duration: "00:39:55"
 source: https://s3-eu-west-1.amazonaws.com/podcast.dave-albert.com/037-Felipe-Coelho-Kussik.mp3
